--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ googleapis-common-protos==1.72.0
 greenlet==3.3.0
 grpcio==1.76.0
 grpcio-status==1.71.2
+gunicorn==25.0.1
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.31.1
